--- a/src/Theorem.Tests/Theorem.Tests.csproj
+++ b/src/Theorem.Tests/Theorem.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Theorem\Theorem.csproj" />
+  </ItemGroup>
+
 </Project>
