Services > Architecture first draft

--- a/src/Theorem.Tests/Theorem.Tests.csproj
+++ b/src/Theorem.Tests/Theorem.Tests.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Theorem.Solver\Theorem.Solver.csproj" />
     <ProjectReference Include="..\Theorem\Theorem.csproj" />
   </ItemGroup>
 
